fixed text-align

--- a/assignment/fcc_responsiveWebDesign/style.css
+++ b/assignment/fcc_responsiveWebDesign/style.css
@@ -40,6 +40,10 @@
   padding: 2em;
 }
 
+#tribute-info ul {
+  text-align: left;
+}
+
 li {
   padding: 0.5em;
 }
